# bevy-of-boids

./: .gitignore  Cargo.toml  README.md  default.nix
src/: bevy-ball-game.code-workspace  main.rs
