[package]
name = "bevy-of-boids"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.10.0"
rand = "0.8.5"
bevy-inspector-egui = "0.18"

[workspace.metadata.dylint]
libraries = [
  { git = "https://github.com/MinerSebas/bevy_lint", branch = "main" }
]

[profile.dev.package."*"]
opt-level = 3